{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 2262,
  "lineage": "5ad2f1c7-51c6-6810-6f56-b25f927847da",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00aa9d3df94c6c354",
            "arn": "arn:aws:ec2:eu-west-1:979559056307:instance/i-0d8ad81a978177d9d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8ad81a978177d9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gabriel.paranthoen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b23ff41b2a75befe",
            "private_dns": "ip-10-99-0-65.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.99.0.65",
            "public_dns": "ec2-34-245-27-88.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.27.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032ceab45c29bd851",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea467e49a6f17f70",
            "tags": {
              "Name": "OracleToMongo",
              "OwnerContact": "gabriel.paranthoen@mongodb.com",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "OwnerContact": "gabriel.paranthoen@mongodb.com",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-0ac94a1ac224a560a"
            ]
          },
          "dependencies": [
            "data.cloudinit_config.ec2_startup",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_partition.current",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.db.random_password.master_password",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:security-group/sg-0ac94a1ac224a560a",
            "description": "Complete Oracle example security group",
            "egress": [],
            "id": "sg-0ac94a1ac224a560a",
            "ingress": [],
            "name": "complete-oracle-20230502134345026000000003",
            "name_prefix": "complete-oracle-",
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": " all",
            "from_port": 0,
            "id": "sgrule-1197858749",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ac94a1ac224a560a",
            "security_group_rule_id": "sgr-0ea32ee70ca6fda39",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.99.0.0/18"
            ],
            "description": "User-service ports",
            "from_port": 0,
            "id": "sgrule-3938064017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ac94a1ac224a560a",
            "security_group_rule_id": "sgr-0f4db6632554cfe7a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": " all",
            "from_port": 0,
            "id": "sgrule-932547002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ac94a1ac224a560a",
            "security_group_rule_id": "sgr-00df1b2b7ea21f8bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:network-acl/acl-0f1723604c9bdd56a",
            "default_network_acl_id": "acl-0f1723604c9bdd56a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f1723604c9bdd56a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "979559056307",
            "subnet_ids": [
              "subnet-0033ddc8cf6276fff",
              "subnet-02e97ca12d2646ac4",
              "subnet-04dba0875d5696cbf",
              "subnet-067b3b4202ab3d4a2",
              "subnet-0765a2a567117c930",
              "subnet-0aca154212bbea219",
              "subnet-0b682e109885f644b",
              "subnet-0e48a78df3a9f8917",
              "subnet-0ea467e49a6f17f70"
            ],
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:route-table/rtb-05798b4a7c8c4cd0b",
            "default_route_table_id": "rtb-05798b4a7c8c4cd0b",
            "id": "rtb-05798b4a7c8c4cd0b",
            "owner_id": "979559056307",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:security-group/sg-0f5041bb2bb5a4bfd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f5041bb2bb5a4bfd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:internet-gateway/igw-0b80897fdc5e3ecf0",
            "id": "igw-0b80897fdc5e3ecf0",
            "owner_id": "979559056307",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b80897fdc5e3ecf0",
            "id": "r-rtb-0ba53f10bc3b7f54c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba53f10bc3b7f54c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:route-table/rtb-083422c28af22982b",
            "id": "rtb-083422c28af22982b",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:route-table/rtb-01860377a4ec2d3c2",
            "id": "rtb-01860377a4ec2d3c2",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:route-table/rtb-03a2580b16c0b7ca3",
            "id": "rtb-03a2580b16c0b7ca3",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:route-table/rtb-0ba53f10bc3b7f54c",
            "id": "rtb-0ba53f10bc3b7f54c",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "timeouts": null,
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a7506f84a6fcf14",
            "route_table_id": "rtb-083422c28af22982b",
            "subnet_id": "subnet-0765a2a567117c930"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3999c330410f667",
            "route_table_id": "rtb-01860377a4ec2d3c2",
            "subnet_id": "subnet-04dba0875d5696cbf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088c1de2411eb392f",
            "route_table_id": "rtb-03a2580b16c0b7ca3",
            "subnet_id": "subnet-067b3b4202ab3d4a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1108df1adcbb505",
            "route_table_id": "rtb-083422c28af22982b",
            "subnet_id": "subnet-0aca154212bbea219"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce4525717c025d3",
            "route_table_id": "rtb-01860377a4ec2d3c2",
            "subnet_id": "subnet-0b682e109885f644b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c56b3a67c37603df",
            "route_table_id": "rtb-03a2580b16c0b7ca3",
            "subnet_id": "subnet-0033ddc8cf6276fff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0819bd8e482a613d8",
            "route_table_id": "rtb-0ba53f10bc3b7f54c",
            "subnet_id": "subnet-0ea467e49a6f17f70"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c03f66fd04ee70e",
            "route_table_id": "rtb-0ba53f10bc3b7f54c",
            "subnet_id": "subnet-0e48a78df3a9f8917"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e437b4a9b5c0ba0",
            "route_table_id": "rtb-0ba53f10bc3b7f54c",
            "subnet_id": "subnet-02e97ca12d2646ac4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-0765a2a567117c930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0765a2a567117c930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-04dba0875d5696cbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dba0875d5696cbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-067b3b4202ab3d4a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067b3b4202ab3d4a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-0aca154212bbea219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aca154212bbea219",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-0b682e109885f644b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b682e109885f644b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-0033ddc8cf6276fff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033ddc8cf6276fff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-0ea467e49a6f17f70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea467e49a6f17f70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-0e48a78df3a9f8917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48a78df3a9f8917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:subnet/subnet-02e97ca12d2646ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e97ca12d2646ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "vpc_id": "vpc-099e16b282ae17a48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979559056307:vpc/vpc-099e16b282ae17a48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/18",
            "default_network_acl_id": "acl-0f1723604c9bdd56a",
            "default_route_table_id": "rtb-05798b4a7c8c4cd0b",
            "default_security_group_id": "sg-0f5041bb2bb5a4bfd",
            "dhcp_options_id": "dopt-bacc43df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099e16b282ae17a48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05798b4a7c8c4cd0b",
            "owner_id": "979559056307",
            "tags": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            },
            "tags_all": {
              "Name": "OracleToMongo",
              "expire-on": "2023-04-09",
              "owner": "gabriel.paranthoen",
              "purpose": "other"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}